# kaizen-cli

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  README.pypi.md  SECURITY.md  pyproject.toml
.github/workflows/: cli-ci.yml  release.yml
cli/: README.md  __init__.py  approval.py  config.py  events.py  main.py  output.py  review.py
cli/bench/: __init__.py  value_add_fingerprint.py
cli/commands/: __init__.py  bench.py  decompose.py  demo.py  init.py  mcp_serve.py  memsafe_roadmap.py  migrate_plan.py  priors.py  recompose.py  resume.py  run.py  status.py  web.py
cli/demo_assets/: README.md  __init__.py
cli/mcp_server/: __init__.py  server.py
cli/mcp_server/tests/: test_server.py
cli/pipeline/: README.md  __init__.py  decompose_v2.py  oneshot_baseline.py  recompose_v2.py  roundtrip_diff.py  specialist_review.py
cli/tests/: test_approval.py  test_bench.py  test_config.py  test_demo.py  test_events.py  test_init.py  test_resume.py  test_review.py
cli/web_server/: __init__.py  server.py  settings.py  sse.py
cli/web_server/routes/: __init__.py  adr.py  decompose.py  memsafe.py  migrate.py  priors.py  providers.py  recompose.py  runs.py  status.py  version.py
cli/web_server/static/: .build-info  index.html
cli/web_server/static/assets/: index-BsmHrNwi.js  index-BsmHrNwi.js.map  index-FELcRPb3.css
cli/web_server/tests/: test_integration.py  test_routes.py  test_sse.py
docs/: CLI_GUIDE.md
npm/: package.json  postinstall.js
scripts/release/: build-binaries.py  kaizen.spec
